--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,9 @@
     
     <head>
         <meta charset="UTF-8"
-        <meta name="author" content="Rafael Vida"
+        <meta name="author" content="Rafael Vida">
+        <title>Minha pagina</title>
+        <link rel="stylesheet" type="text/css" href="./style.css>
     </head>
     
     <body>
