--- a/index2.html
+++ b/index2.html
@@ -6,8 +6,14 @@
         <meta name="author" content="Rafael Vida">
         <title>Minha pagina</title>
         <link rel="stylesheet" type="text/css" href="./style.css>
+        <script src="./arquivo-javascript.js"></script>
     </head>
-    
+        <h1>titulo principal</h1>
+        <h2>subtitulo</h2>
+        <h3>subtitulo</h3>
+        <h4>subtitulo</h4>
+        <h5>subtitulo</h5>
+        <h6>subtitulo</h6>
     <body>
 
     </body>
